changed font size

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                     </p>
 
                     <h3>Languages/Frameworks I utilize</h3>
-                    <p>Languages: C# | SQL | HTML | CSS | JavaScript</p>
+                    <p>Languages: C# | Java | SQL | HTML | CSS | JavaScript</p>
                     <p>
                       Frameworks: ASP.NET Core | ASP.NET MVC | ASP.NET Web API | EntityFramework
                     </p>
