--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
     <div id="site-border-bottom"></div>
     <!-- Add your content of header -->
     <header>
+
       <nav class="navbar navbar-fixed-top navbar-default">
         <div class="container">
           <button
@@ -74,19 +75,19 @@
                   <div class="row">
                     <div class="col-md-5 address-container">
                       <ul class="list-unstyled">
-                        <li>
+                        <li class="info-text">
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
                           (612)998-6607
                         </li>
-                        <li>
+                        <li class="info-text">
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
                           AlexanderJColeman01@gmail.com
                         </li>
-                        <li>
+                        <li class="info-text">
                           <span class="fa-icon">
                             <i
                               class="fa fa fa-map-marker"
@@ -125,6 +126,7 @@
         </div>
       </div>
     </div>
+
 
     <footer class="footer-container text-center">
       <div class="container">
