Chnaged background color

--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
 
   </head>
 
-  <body class="">
+  <body class="work">
     <div id="site-border-left"></div>
     <div id="site-border-right"></div>
     <div id="site-border-top"></div>
     <div id="site-border-bottom"></div>
     <!-- Add your content of header -->
     <header>
-      <nav class="navbar navbar-fixed-top navbar-default">
+      <nav style="background-color: rgb(191, 46, 46) ;" class="navbar navbar-fixed-top navbar-default">
         <div class="container">
           <button
             type="button"
