--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <link href="./main.3f6952e4.css" rel="stylesheet" />
   </head>
 
-  <body class="">
+  <body class="work">
     <div id="site-border-left"></div>
     <div id="site-border-right"></div>
     <div id="site-border-top"></div>
@@ -34,7 +34,7 @@
     <!-- Add your content of header -->
     <header>
 
-      <nav class="navbar navbar-fixed-top navbar-default">
+      <nav style="background-color: rgb(191, 46, 46) ;" class="navbar navbar-fixed-top navbar-default">
         <div class="container">
           <button
             type="button"
