--- a/works.html
+++ b/works.html
@@ -19,14 +19,14 @@
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
-<body class="">
+<body class="work">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
  <!-- Add your content of header -->
 <header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
+  <nav style="background-color: rgb(191, 46, 46) ;" class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -75,7 +75,7 @@
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>Volleyball web app</h3>
-                        <p>A .NET Core MVC web applications utilizing entity framework and SQL Server</p>
+                        <p class="project-txt">A .NET Core MVC web applications utilizing entity framework and SQL Server</p>
                         <a href="https://github.com/AlexanderColeman/SandVolleyballWebApp" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -86,7 +86,7 @@
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
                         <h3>WeatherMapApi</h3>
-                        <p>Utilized an open weather map Api in a console application.A user can enter a city and get current the temperature</p>
+                        <p class="project-txt">Utilized an open weather map Api in a console application.A user can enter a city and get current the temperature</p>
                         <a href="https://github.com/AlexanderColeman/WeatherMap" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -97,7 +97,7 @@
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>Taco Parser</h3>
-                        <p>Parse information from a CSV file to caluclate the distance between to locations that are the farthest apart.</p>
+                        <p class="project-txt">Parse information from a CSV file to caluclate the distance between to locations that are the farthest apart.</p>
                         <a href="https://github.com/AlexanderColeman/TacoParser" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -115,7 +115,7 @@
                     <div class="card-container">
                       <h4>004/006</h4>
                       <h3>ASP.NET Core MVC</h3>
-                      <p>A ASP.NET Core MVC Project that of a Mock best buy database for the product table</p>
+                      <p class="project-txt">A ASP.NET Core MVC Project that of a Mock best buy database for the product table</p>
                       <a href="https://github.com/AlexanderColeman/ASP-.NET-MVC" class="btn btn-default">Discover</a>
                     </div>
                   </div>
@@ -126,7 +126,7 @@
                       <div class="card-container">
                         <h4>005/006</h4>
                         <h3>Hotel reservation database</h3>
-                        <p>A hotel reservation database built with MySql workbench.</p>
+                        <p class="project-txt">A hotel reservation database built with MySql workbench.</p>
                         <a href="https://github.com/AlexanderColeman/Hotel-Reservation-Database" class="btn btn-default">Discover</a>
                       </div>
                     </div>
@@ -138,7 +138,7 @@
                       <div class="card-container">
                         <h4>006/006</h4>
                         <h3>ASP.NET Core Web API</h3>
-                        <p>Created an API with ASP.NET Core Web API and post Postman that implemtns all CRUD operations </p>
+                        <p class="project-txt">Created an API with ASP.NET Core Web API and post Postman that implemtns all CRUD operations </p>
                         <a href="https://github.com/AlexanderColeman/API_Template" class="btn btn-default">Discover</a>
                       </div>
                     </div>
