fixed url in projects

--- a/works.html
+++ b/works.html
@@ -69,14 +69,14 @@
             <div class="item active">
                 <div class="row">
                     <div class="col-sm-4">
-                      <a href="https://github.com/AlexanderColeman/SandVolleyballWebApp" title="" class="black-image-project-hover">
+                      <a href="https://github.com/AlexanderColeman/AlexanderColeman-Sand_Volleyball_ASP.NET_Core_MVC_Web_App" title="" class="black-image-project-hover">
                         <img src="assets\images\SandVolleyball.jfif" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>Volleyball web app</h3>
                         <p class="project-txt">A .NET Core MVC web applications utilizing entity framework and SQL Server</p>
-                        <a href="https://github.com/AlexanderColeman/SandVolleyballWebApp" title="" class="btn btn-default">Discover</a>
+                        <a href="https://github.com/AlexanderColeman/AlexanderColeman-Sand_Volleyball_ASP.NET_Core_MVC_Web_App" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
