--- a/works.html
+++ b/works.html
@@ -75,7 +75,7 @@
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
                         <h3>Volleyball web app</h3>
-                        <p class="project-txt">A .NET Core MVC web applications utilizing entity framework and SQL Server</p>
+                        <p class="project-txt">A .NET Core MVC web application utilizing entity framework and SQL Server</p>
                         <a href="https://github.com/AlexanderColeman/AlexanderColeman-Sand_Volleyball_ASP.NET_Core_MVC_Web_App" title="" class="btn btn-default">Discover</a>
                       </div>
                     </div>
