--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div id="aboutMeContainer" class="section-container-spacer text-center">
-              <h1 class="h2">01 : About me</h1>
+              <h1 class="h2">03 : About me</h1>
             </div>
 
             <div  class="row">
@@ -74,15 +74,15 @@
                 <div class="row">
                   <div class="col-xs-12 col-md-6">
                     <h3>Professional Summary</h3>
-                    <p>
+                    <p class="info-Description">
                       Dedicated Software Developer currently building
-                      foundational skills for a C/.NET Software Development
+                      foundational skills for a C#/.NET Software Development
                       role. Intrinsically motivated individual prepared for
                       challenges of a position and ready to use abilities in
                       communication and problem-solving to meet company goals.
                     </p>
                     <h3>Experience</h3>
-                    <p>
+                    <p class="info-Description">
                       Application debugging, MVC design pattern, and retrieving
                       data from APIs. Developed web and console applications
                       that are integrated with SQL databases to execute CRUD
@@ -92,10 +92,11 @@
                     </p>
 
                     <h3>Languages/Frameworks I utilize</h3>
-                    <p>Languages: C# | Java | SQL | HTML | CSS | JavaScript</p>
-                    <p>
+                    <p class="info-Description">Languages: C# | Java | SQL | HTML | CSS | JavaScript</p>
+                    <p class="info-Description">
                       Frameworks: ASP.NET Core | ASP.NET MVC | ASP.NET Web API | EntityFramework
                     </p>
+                    <p class="info-Description">Tools:  Visual Studio | SQL Server | MySQL Workbench | GitHub | xUnit</p>
                   </div>
                   <div class="col-xs-12 col-md-6">
                     <img src="" class="img-responsive" alt="" />
