--- a/works.html
+++ b/works.html
@@ -57,7 +57,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Projects</h1>
-          <p>Below you can find a showcase of my most recent projects.</p>
+          <h4>Below you can find a showcase of my most recent projects.</h4>
         </div>
       </div>
 
